--- a/resources/src/assets/scss/sections/bath.scss
+++ b/resources/src/assets/scss/sections/bath.scss
@@ -24,13 +24,11 @@
     flex: 1;
     padding: 40px 30px;
     position: relative;
+
     @media only screen and (max-width: $bath-schedule-column) {
-        // padding: 40px 0;
-        h3,h4{
-          // margin-left: 30px;
-          // margin-right: 30px;
-        }
-      }
+      padding: 40px 0;
+
+    }
 
     h3 {
       margin-bottom: 20px;
@@ -50,6 +48,7 @@
     width: 100%;
     gap: 64px;
     white-space: nowrap;
+    margin-bottom: auto;
 
     @media (max-width: $bath-column) {
       justify-content: space-evenly;
@@ -58,15 +57,14 @@
 
     @media only screen and (max-width: $bath-schedule-column) {
       flex-direction: column;
-      
+      &-days p:last-child{
+        margin-bottom: 0;
+      }
     }
   }
 
   &__btn {
     align-self: self-start;
-    // position: absolute;
-    // left: 30px;
-    // bottom: 40px;
 
     @media (max-width: $bath-column) {
       align-self: center;
