--- a/resources/src/assets/scss/sections/rooms.scss
+++ b/resources/src/assets/scss/sections/rooms.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding-top: 70px;
-    padding-bottom: 30px;
+    padding-bottom: 70px;
     text-align: center;
 
     h2 {
@@ -13,6 +13,7 @@
     &__cards {
         display: flex;
         gap: 30px;
+
         @media only screen and (max-width: $px768) {
             flex-direction: column;
         }
@@ -23,6 +24,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        background-color: white;
 
         picture {
             margin-bottom: 40px;
@@ -31,5 +33,13 @@
         h4 {
             margin-bottom: 20px;
         }
+    }
+
+    &__img{
+        width: 100%;
+    }
+
+    &__text {
+        padding: 0 30px 40px;
     }
 }
