--- a/resources/src/assets/scss/utils/base.scss
+++ b/resources/src/assets/scss/utils/base.scss
@@ -111,7 +111,8 @@ main {
 
 .mask3 {
     background-image: url(../../../../../public/assets/img/mask3.svg);
-    // background-position: center right;
+    background-position: right 100%;
+    background-size: auto 100%;
 }
 
 body.modal-open {
