--- a/resources/src/assets/scss/sections/documents.scss
+++ b/resources/src/assets/scss/sections/documents.scss
@@ -1,43 +1,9 @@
-#documents {
+.documents {
+  margin: 0 auto;
+  padding-top: 70px;
 
-  @media (max-width: $px768) {
-    padding-right: 0;
-  }
-
-  h2 {    
+  h2 {
+    text-align: center;
     margin-bottom: 40px;
-    @media (max-width: $px480) {
-      text-align: center;
-    }
   }
-
-  .ellipse2 {
-    right: 13%;
-    top: 1%;
-  }
-}
-
-.documents__content {
-  max-width: 1290px;
-  margin: 0 auto;
-  margin-top: 90px;
-}
-
-.documents__card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.swiper-wrapper {
-  margin: 0 auto;
-}
-
-.mySwiper {
-  width: 100%;
-  // height: 440px;
-  // outline: 1px solid red;
 }
