--- a/resources/src/assets/scss/layouts/footer.scss
+++ b/resources/src/assets/scss/layouts/footer.scss
@@ -1,100 +1,19 @@
-footer {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    padding: 40px 30px 20px 30px;
-    position: relative;
-
-    @media (max-width: $px768) {
-        min-height: 307px;
-        padding-top: 110px;
-    }
-}
-
-.footer-top,
-.footer-bottom {
-    flex: 1;
-    width: 100%;
-    max-width: 1290px;
+.footer {
     display: flex;
     justify-content: space-between;
-}
+    &__block1 {}
 
-.footer-bottom {
-    p {
-        font-family: 'Open Sans';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 15px;
-        line-height: 140%;
-
-        a {
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 15px;
-            line-height: 140%;
+    &__block2 {
+        display: flex;
+        flex-direction: column;
+        &-pa{
+            display: flex;
         }
     }
-}
-
-.footer-top__logo-container {
-    @media (max-width: $px768) {
-        position: absolute;
-    }
-
-    @media (max-width: $px480) {
-        left: 50%;
-        transform: translate(-50%);
-    }
-}
-
-#rights {
-    @media (max-width: $px768) {
-        position: absolute;
-        top: 169px;
-        left: 29px;
-    }
-
-    @media (max-width: $px480) {
-        left: 50%;
-        transform: translate(-50%);
-    }
-
-    @media (max-width: $px480) {
-        text-align: center;
-        width: 100%;
-    }
-}
-
-#policy {
-    @media (max-width: $px768) {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%);
-        top: 290px;
-    }
-
-    @media (max-width: $px480) {
-        top: 485px;
-        width: 100%;
-        text-align: center;
-    }
-}
-
-#alexmedia {
-    @media (max-width: $px768) {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%);
-        top: 330px;
-        padding-bottom: 20px;
-        width: 100%;
-        text-align: center;
-    }
-
-    @media (max-width: $px480) {
-        top: 540px;
+    &__nav{
+        ul{
+            display: flex;
+            list-style-type: none;
+        }
     }
 }
