--- a/resources/src/assets/scss/sections/contacts.scss
+++ b/resources/src/assets/scss/sections/contacts.scss
@@ -1,21 +1,41 @@
 .contacts {
-  position: relative;
+  @media only screen and (max-width: $px768) {
+    align-items: center;
+    flex-direction: column;
+  }
 
   &__text {
-    outline: 1px solid red;
-    display: flex;
-    flex-direction: column;
-    padding: 70px 50px;
-    max-width: 530px;
-    min-height: 381px;
     position: absolute;
     top: 112px;
     left: 10vw;
+    display: flex;
+    justify-content: center;
+    min-height: 380px;
     z-index: 1;
-    background-color: white;
+
+    @media only screen and (max-width: $px1024) {
+      left: 30px;
+    }
+
     @media only screen and (max-width: $px768) {
       position: static;
       max-width: unset;
+    }
+
+    &-container {
+      outline: 1px solid red;
+      display: flex;
+      flex-direction: column;
+      padding: 70px 50px 80px;
+      max-width: 530px;
+      background-color: white;
+
+      @media only screen and (max-width: $px768) {
+        position: absolute;
+        width: 100vw;
+        max-width: unset;
+      }
+
     }
 
     h2 {
@@ -33,12 +53,14 @@
 
   &__map {
     position: relative;
-    width: 100%;
-    height: 600px;
+    display: flex;
+    justify-content: center;
+    min-height: 600px;
   }
 }
 
 #ymaps {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  width: 100vw;
+  height: 600px;
 }
