--- a/resources/src/assets/scss/layouts/footer.scss
+++ b/resources/src/assets/scss/layouts/footer.scss
@@ -1,19 +1,94 @@
+#footer {
+    position: relative;
+    padding: 0 30px;
+
+    @media (max-width: $px768) {
+        padding: 0 20px;
+    }
+}
+
 .footer {
     display: flex;
     justify-content: space-between;
-    &__block1 {}
+    padding: 80px 0 20px;
+
+    @media only screen and (max-width: $px1024) {
+        flex-direction: column;
+    }
+
+    @media only screen and (max-width: $px768) {
+        align-items: center;
+        padding-bottom: 45px;
+    }
+
+    &__block1 {
+        @media only screen and (max-width: $px1024) {
+            margin-bottom: 40px;
+        }
+
+    }
+
+    &__logo {
+        margin-bottom: 15px;
+    }
 
     &__block2 {
         display: flex;
         flex-direction: column;
-        &-pa{
+        width: 100%;
+        max-width: 696px;
+
+        @media only screen and (max-width: $px1024) {
+            max-width: unset;
+            flex-direction: column;
+        }
+
+        &-pa {
             display: flex;
+            width: 100%;
+            justify-content: space-between;
+
+            @media only screen and (max-width: $px1024) {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .policy {
+                @media only screen and (max-width: $px1024) {
+                    margin-bottom: 30px;
+                }
+            }
         }
     }
-    &__nav{
-        ul{
+
+    &__nav {
+        @media only screen and (max-width: $px1024) {
+            margin-bottom: 30px;
+        }
+
+        ul {
+            width: 100%;
+            // background-color: red;
             display: flex;
             list-style-type: none;
+            justify-content: space-between;
+            padding: 0;
+            margin: 0;
+
+            @media only screen and (max-width: 576px) {
+                flex-direction: column;
+                align-items: center;
+                gap: 30px;
+            }
+        }
+    }
+}
+
+.alexmedia {
+    @media only screen and (max-width: $px480) {
+        text-align: center;
+        a{
+            display: block;
         }
     }
 }
