--- a/resources/src/assets/scss/sections/info.scss
+++ b/resources/src/assets/scss/sections/info.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   padding-top: 70px;
+  padding-bottom: 80px;
 
   h2 {
     text-align: center;
@@ -61,6 +62,12 @@
 
     @media only screen and (max-width: $px1024) {
       min-height: unset;
+    }
+
+    a {
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 27px;
     }
 
     *:first-child,
