--- a/resources/src/assets/scss/sections/bath.scss
+++ b/resources/src/assets/scss/sections/bath.scss
@@ -8,11 +8,14 @@
     background: rgba(243, 238, 235, 0.8);
     width: 100%;
     height: 610px;
+
     @media (max-width: $bath-column) {
       flex-direction: column;
       align-items: center;
       text-align: center;
       min-height: unset;
+      height: unset;
+      padding-bottom: 136px;
     }
 
 
@@ -24,11 +27,10 @@
     flex: 1;
     padding: 40px 30px;
     position: relative;
-    width: 710px;
-    // width: 100%;
 
-    @media only screen and (max-width: $bath-schedule-column) {
-      padding: 40px 0;
+    // width: 710px;
+    // width: 100%;
+    @media (max-width: $bath-column) {
       width: 100%;
     }
 
@@ -49,19 +51,36 @@
     display: flex;
     width: 100%;
     gap: 64px;
-    white-space: nowrap;
+    justify-content: flex-start;
+    // white-space: nowrap;
     margin-bottom: auto;
 
     @media (max-width: $bath-column) {
-      justify-content: space-evenly;
+      justify-content: center;
       gap: 30px;
     }
 
     @media only screen and (max-width: $bath-schedule-column) {
       flex-direction: column;
-      &-days p:last-child{
+      align-items: center;
+      gap: 0;
+
+      &-days p:last-child {
         margin-bottom: 0;
       }
+    }
+
+    &-column {
+
+      // flex: 1;
+      @media (max-width: $bath-column) {
+        width: 50%;
+      }
+
+      @media only screen and (max-width: $bath-schedule-column) {
+        width: 100%;
+      }
+
     }
   }
 
@@ -90,7 +109,6 @@
   }
 
   @media only screen and (max-width: $bath-schedule-column) {
-    // flex-direction: column;
     height: 500px;
     min-height: 500px;
   }
