--- a/resources/src/assets/scss/sections/rooms.scss
+++ b/resources/src/assets/scss/sections/rooms.scss
@@ -30,16 +30,20 @@
             margin-bottom: 40px;
         }
 
-        h4 {
-            margin-bottom: 20px;
-        }
+
     }
 
-    &__img{
+    &__img {
         width: 100%;
     }
 
     &__text {
         padding: 0 30px 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: space-between;
+        align-items: center;
+        height: auto;
     }
 }
