--- a/resources/src/assets/scss/sections/laundry.scss
+++ b/resources/src/assets/scss/sections/laundry.scss
@@ -52,31 +52,32 @@
 
         h1 {
             margin-bottom: 20px;
-        }
 
-
-        h4:first-of-type {
-            margin-bottom: 20px;
-
-            @media only screen and (max-width: $laundry-column) {
-                margin-bottom: 0;
+            @media only screen and (max-width: $px360) {
+                font-weight: 500;
+                font-size: 40px;
+                line-height: 130%;
             }
         }
 
-        h4 {
-            margin-bottom: 10px;
-        }
+        h2 {
+            @media only screen and (max-width: $px480) {
 
-        h4:last-of-type {
-            margin-bottom: 30px;
-
-            @media only screen and (max-width: $laundry-column) {
-                margin-bottom: 0;
+                letter-spacing: -0.4px;
             }
         }
 
         h3 {
             margin-bottom: 30px;
+            color: $font-brown;
+        }
+
+        & > h4 {
+            margin-bottom: 20px;
+
+            @media only screen and (max-width: $laundry-column) {
+                margin-bottom: 0;
+            }
         }
 
         &-list {
@@ -89,15 +90,6 @@
                 padding: 0 10vw;
                 margin-bottom: 30px;
                 margin-top: 20px;
-
-                h4 {
-                    display: flex;
-                    margin-bottom: 0;
-
-                    @media only screen and (max-width: $px480) {
-                        // display: inline;
-                    }
-                }
             }
 
             @media only screen and (max-width: $px1024) {
@@ -111,6 +103,19 @@
 
             @media only screen and (max-width: 410px) {
                 align-items: flex-start;
+            }
+
+            h4 {
+                margin-bottom: 10px;
+            }
+
+            h4:last-of-type {
+                margin-bottom: 30px;
+
+                @media only screen and (max-width: $laundry-column) {
+                    display: flex;
+                    margin-bottom: 0;
+                }
             }
         }
 
