--- a/resources/src/assets/scss/layouts/footer.scss
+++ b/resources/src/assets/scss/layouts/footer.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     padding: 80px 0 20px;
+    flex-wrap: wrap;
 
     @media only screen and (max-width: $px1024) {
         flex-direction: column;
@@ -53,9 +54,19 @@
                 align-items: center;
             }
 
-            .policy {
+            &-policy {
                 @media only screen and (max-width: $px1024) {
                     margin-bottom: 30px;
+                }
+            }
+
+            &-alexmedia {
+                @media only screen and (max-width: $px480) {
+                    text-align: center;
+
+                    a {
+                        display: block;
+                    }
                 }
             }
         }
@@ -63,6 +74,7 @@
 
     &__nav {
         margin-bottom: auto;
+
         @media only screen and (max-width: $px1024) {
             margin-bottom: 30px;
         }
@@ -83,13 +95,16 @@
             }
         }
     }
-}
 
-.alexmedia {
-    @media only screen and (max-width: $px480) {
-        text-align: center;
-        a{
-            display: block;
+    &__disclaimer {
+        min-width: 100%;
+        margin-top: 15px;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 160%;
+        @media only screen and (max-width: $px1024) {
+            text-align: center;
+            margin-top: 30px;
         }
     }
 }
