--- a/resources/src/assets/scss/sections/info.scss
+++ b/resources/src/assets/scss/sections/info.scss
@@ -15,7 +15,6 @@
         display: flex;
         flex: 1;
         gap: 30px;
-        // flex-wrap: wrap;
 
         @media only screen and (max-width: $infowrap) {
             flex-wrap: wrap;
@@ -55,7 +54,7 @@
                 flex-direction: row;
             }
 
-            @media only screen and (max-width: $px480) {
+            @media only screen and (max-width: 680px) {
                 display: flex;
                 flex-direction: column;
             }
