--- a/resources/src/assets/scss/components/mobile-menu.scss
+++ b/resources/src/assets/scss/components/mobile-menu.scss
@@ -7,7 +7,7 @@
   border: none;
   z-index: 4;
 
-  @media (max-width: $px1024) {
+  @media (max-width: 1165px) {
     &-active {
       display: block;
     }
