--- a/resources/src/assets/scss/layouts/fixedMenu.scss
+++ b/resources/src/assets/scss/layouts/fixedMenu.scss
@@ -1,19 +1,21 @@
 .fixedHeader.navbar_scrolled {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 8px rgba(194, 196, 199, 0.5);
-    transition: transform 2s ease ;
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    //transform: translateY(-100px);
-    animation-name: fadeInNavbar;
-    animation-duration: 1s;
+    @media only screen and (min-width: 1065px) {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        background: #FFFFFF;
+        box-shadow: 0px 2px 8px rgba(194, 196, 199, 0.5);
+        transition: transform 2s ease;
+        width: 100vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        //transform: translateY(-100px);
+        animation-name: fadeInNavbar;
+        animation-duration: 1s;
+    }
 }
 
 
